--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,9 @@
 			<version>2.1.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>4.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.mashape.unirest</groupId>
